# jenkins-from-scratch

./: .gitignore  Dockerfile  LICENSE  README.md  ansible.cfg  aws_ec2.yml  deploy-jenkins.yml  jenkins-casc.yml  plugins.txt  pyproject.toml  vars.yml  vars_private.yml
terratest/: docker_test.go  go.mod  go.sum  terratest_instance_test.go
