[project]
name = "jenkins-from-scratch"
version = "0.1.0"
description = "Automated pure infra-as-code Jenkins"
authors = [
    {name = "danktec"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible (>=11.8.0,<12.0.0)",
    "boto3 (>=1.40.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
